--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -7,7 +7,64 @@ header {
   }
 }
 
-.header-wrapper {
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  &__title {
+    font-size: 2rem;
+    font-weight: bold;
+  }
+}
+.header-nav-list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  &__item {
+    margin: 0.5rem;
+  }
+  &__link {
+    color: black;
+    text-decoration: none;
+  }
+  &__link:hover {
+    color: black;
+    text-decoration: underline;
+  }
+}
+
+.header-nav.desktop {
+  display: none;
+  @media (min-width: $screen-lg) {
+    display: block;
+  }
+}
+
+.header-nav.mobile {
+  display: none;
+}
+.header-nav[active].mobile {
+  display: block;
+  position: absolute;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  width:100%;
+  height: 100%;
+}
+
+.header__menu-btn {
+  background: transparent;
+  border:none;
+  outline: none;
+}
+.header__menu-btn.mobile {
+  display: block;
+  @media (min-width: $screen-lg) {
+    display: none;
+  }
 }
 
 .header-frame {
@@ -24,7 +81,7 @@ header {
   overflow: visible;
 }
 .header-frame:after {
-  content: '';
+  content: "";
   position: absolute;
   background: var(--box-color);
   width: 17px;
@@ -35,7 +92,7 @@ header {
   z-index: -1;
 }
 .header-frame:before {
-  content: '';
+  content: "";
   position: absolute;
   background: var(--box-color);
   width: 15px;
@@ -46,11 +103,5 @@ header {
   z-index: -1;
 }
 
-.header-title {
-  font-size: 2rem;
-  font-weight: bold;
-}
-
-.header-nav {
-  display: flex;
+.header__title {
 }
