--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -69,7 +69,8 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1;
+  font-family: Arial, Helvetica, sans-serif;
 }
 ol, ul {
 	list-style: none;
@@ -85,6 +86,10 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+
+button {
+  cursor: pointer;
 }
 
 @import "vars";
