--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,6 +72,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
   line-height: 1;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 ol, ul {
@@ -93,6 +94,10 @@ table {
   border-spacing: 0;
 }
 
+button {
+  cursor: pointer;
+}
+
 header {
   max-width: 1584px;
   margin: 0 auto;
@@ -101,6 +106,73 @@ header {
 @media (min-width: 1056px) {
   header {
     padding: 1rem 2rem;
+  }
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__title {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.header-nav-list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+.header-nav-list__item {
+  margin: 0.5rem;
+}
+.header-nav-list__link {
+  color: black;
+  text-decoration: none;
+}
+.header-nav-list__link:hover {
+  color: black;
+  text-decoration: underline;
+}
+
+.header-nav.desktop {
+  display: none;
+}
+@media (min-width: 1056px) {
+  .header-nav.desktop {
+    display: block;
+  }
+}
+
+.header-nav.mobile {
+  display: none;
+}
+
+.header-nav[active].mobile {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.header__menu-btn {
+  background: transparent;
+  border: none;
+  outline: none;
+}
+
+.header__menu-btn.mobile {
+  display: block;
+}
+@media (min-width: 1056px) {
+  .header__menu-btn.mobile {
+    display: none;
   }
 }
 
@@ -140,15 +212,6 @@ header {
   top: 1px;
   transform: translateZ(-1px) rotate(45deg);
   z-index: -1;
-}
-
-.header-title {
-  font-size: 2rem;
-  font-weight: bold;
-}
-
-.header-nav {
-  display: flex;
 }
 
 /*# sourceMappingURL=style.css.map */
