--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{define "main"}}
-<div>
+<div class="post-list">
   {{ $pages := .Pages }}
       {{ if .IsHome }}
       {{ $pages = .Site.RegularPages }}
