--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,21 +1,31 @@
 {{define "main"}}
 <div class="hero">
     {{ if isset .Site.Params "featured" }}
-      <div class="featured-posts">
-        {{ $pages := .Site.RegularPages }}
-        {{range first 3 $pages}}
-          {{ .Render "summary" }}
-        {{end}}
-      </div>
-      {{end}}
-</div>
-<div class="post-list">
-  {{ $pages := .Pages }}
-      {{ if .IsHome }}
-      {{ $pages = .Site.RegularPages }}
-      {{ end }}
-      {{- range $pages -}}
-        {{ .Render "li" }}
-      {{- end }}
+        <div class="featured-posts">
+            {{ $pages := .Site.RegularPages }}
+            {{range first 3 $pages}}
+            {{ partial "featured" . }}
+            {{end}}
+        </div>
+        <div class="post-list">
+            {{ $pages := .Pages }}
+            {{ if .IsHome }}
+            {{ $pages = .Site.RegularPages }}
+            {{ end }}
+            {{ range after 3 $pages }}
+            {{ .Render "li" }}
+            {{ end }}
+        </div>
+    {{else}}
+        <div class="post-list">
+            {{ $pages := .Pages }}
+            {{ if .IsHome }}
+            {{ $pages = .Site.RegularPages }}
+            {{ end }}
+            {{ range $pages }}
+            {{ .Render "li" }}
+            {{ end }}
+        </div>
+    {{end}}
 </div>
 {{end}}
