--- a/assets/scss/_summary.scss
+++ b/assets/scss/_summary.scss
@@ -1,3 +1,134 @@
+.featured-posts {
+  display: grid;
+  width: 100%;
+  margin: 1rem 0;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-template-rows: auto;
+  grid-template-areas: 
+    "first second"
+    "first third";
+}
+
+
 .featured-post {
-    max-width: 50%;
+  border: 1px solid var(--color-border);
+  padding: 2rem;
+  position:relative;
+
+  &:hover {
+    background: var(--color-hover);
+  }
+
+  &__wrapper {
+    padding: 1rem;
+    background: transparent;
+  }
+
+  &__image {
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    display: none;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__image-filter {
+    display:none;
+    background: rgba(0,0,0,0.65);
+    position: absolute;
+    z-index: 0;
+    width:100%;
+    height: 100%;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+  }
+
+  &__description {
+      color:var(--color-text-2);
+      margin: 0.5rem 0;
+  }
+
+  &__tags {
+    display: flex;
+    position: relative;
+    z-index: 1;
+    margin-top: 1rem;
+
+    & > li {
+      padding: 0.5rem;
+      border: 1px solid var(--color-border);
+    }
+
+    & > li:not(:last-of-type) {
+      margin-right: 1rem; 
+    }
+  }
+
+  &__title {
+    &:hover {
+    }
+  }
+
+  &:nth-child(1) {
+    grid-area: first;
+    .featured-post__title{
+      font-weight: 700;
+      font-size: 1.5rem;
+      margin: 1rem 0;
+    }
+    .featured-post__description{
+      font-size: 1rem;
+    }
+  }
+  &:nth-child(2) {
+    grid-area: second;
+    .featured-post__title{
+      font-weight: 700;
+      font-size: 1rem;
+      margin: 0.5rem 0;
+    }
+    .featured-post__description{
+      font-size: 0.8rem;
+    }
+  }
+  &:nth-child(3) {
+    grid-area: third;
+    .featured-post__title{
+      font-weight: 700;
+      font-size: 1rem;
+      margin: 0.5rem 0;
+    }
+    .featured-post__description{
+      font-size: 0.8rem;
+    }
+  }
+
+
+}
+
+.featured-post:hover .featured-post__image {
+  display: block;
+}
+.featured-post:hover .featured-post__image-filter {
+  display: block;
+}
+.featured-post:hover .featured-post__wrapper {
+  color: var(--color-text-light);
+  z-index: 1;
+  position: relative;
+}
+.featured-post:hover .featured-post__description {
+  color: var(--color-text-light);
+}
+.featured-post:hover .featured-post__tags > li > a {
+  color: var(--color-text-light);
+}
+.featured-post:hover .featured-post__tags > li {
+  border: 1px solid var(--color-border-light);
 }
