add featured posts scss, add some styles

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -71,7 +71,7 @@ header {
   width: calc(100% - 2rem - 16px);
   transform: translateX(-6px);
   padding: 1rem;
-  background: var(--header-frame-bg);
+  background: var(--color-header-bg);
   border: 3px solid var(--box-color);
   box-shadow: 11px 11px var(--box-color);
   position: relative;
