--- a/assets/scss/_li.scss
+++ b/assets/scss/_li.scss
@@ -6,17 +6,17 @@
   margin-right: auto;
   margin-left: auto;
   width: calc(100% - 1rem - 10px);
-  background: var(--post-card-bg);
+  background: var(--color-card-bg);
   transition: transform 0.2s ease;
-  border: 1px solid var(--post-card-border-clr);
-  box-shadow: 5px 5px var(--post-card-boxshdw-clr);
+  border: 1px solid var(--color-border);
+  box-shadow: 5px 5px var(--color-boxshadow);
   transition-property: box-shadow, transform;
   transition-duration: 0.2s, 0.3s;
   transition-timing-function: ease;
 
   &:hover {
     transform: translate(4px, 4px);
-    box-shadow: 1px 1px var(--post-card-box-shdw-clr);
+    box-shadow: 1px 1px var(--color-boxshadow);
   }
 
   &__description {
@@ -36,13 +36,14 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      max-height: 10rem;
     }
   }
 
   &__title {
     font-size: 1.5rem;
     font-weight: 600;
-    margin-bottom: 0.4rem;
+    margin-bottom: 0.5rem;
     color: black;
   }
 
@@ -74,7 +75,8 @@
   overflow: hidden;
   grid-template-columns: minmax(0, 3fr) minmax(0, 2fr);
   grid-template-rows: minmax(auto, 25px) minmax(0, auto) auto;
-  grid-column-gap: 8px;
+  grid-column-gap: 0.5rem;
+  grid-row-gap: 1rem;
   align-items: center;
   grid-template-areas:
   'pad image'
@@ -87,15 +89,19 @@
 
   &__title {
     grid-area: title;
+    align-self: start;
   }
   &__image {
     grid-area: image;
-    align-self: start;
   }
   &__description {
     grid-area: description;
+    align-self: start;
   }
   &__pad {
     grid-area: pad;
+  }
+  &__nodesc {
+    grid-row: title / description;
   }
 }
