--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,14 +1,17 @@
 :root {
   --color-bg: rgba(255,247,240, 1);
+  --color-card-bg: rgba(250,250,250,0.8);
+  --color-header-bg: white;
   --color-text: black;
   --color-text-2: #333333;
   --color-text-light: white;
   --color-text-light-2: rgba(255,255,255,0.9);
-  --color-hover: rgba(120,120,120, 1);
+  --color-hover: linear-gradient(to right, rgba(120,120,120,1) 0%, rgba(120,120, 120,0.7) 50%);
   --color-border: rgba(120,120,120,1);
   --color-border-dark: black;
   --color-border-light: white;
-  --header-frame-bg: white;
+  --color-boxshadow: rgba(100,100,100,1);
+  --color-boxshadow-dark: rgba(70,70,70,1);
   --body-bg: rgba(255, 247, 240, 1);
   --box-color: black;
   --post-text-color: #343f44;
@@ -81,6 +84,7 @@ body {
   line-height: 1;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
+  background: var(--color-bg);
 }
 * {
   box-sizing: border-box;
@@ -116,3 +120,4 @@ a {
 @import "li";
 @import "list";
 @import "summary";
+@import "featured-posts";
