--- a/assets/scss/_li.scss
+++ b/assets/scss/_li.scss
@@ -5,7 +5,7 @@
   margin-bottom: var(--margin-between-cards);
   margin-right: auto;
   margin-left: auto;
-  width: calc(100% - 1rem - 10px);
+  width: calc(100%);
   background: var(--color-card-bg);
   transition: transform 0.2s ease;
   border: 1px solid var(--color-border);
