--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,13 +1,20 @@
 <article class="post-item">
-    <div class="post-item-grid">
-        {{$test := "test"}}
-        {{$title_class := "post-item-grid__title"}}
-        {{if not (isset .Params "description")}}
-        {{$title_class = "post-item-grid__nodesc"}}
+        {{$grid_class := ""}}
+        {{if (not (isset .Params "description")) | and (not (isset .Params "image")) | and (not (isset .Params "tags"))}}
+            {{$grid_class = "post-item-grid--only-title"}}
+        {{else if (not (isset .Params "description")) | and (not (isset .Params "image"))}}
+            {{$grid_class = "post-item-grid--title-with-tag"}}
+        {{else if (not (isset .Params "tags") | and (not (isset .Params "image")))}}
+            {{$grid_class = "post-item-grid--noimage-nopad"}}
+        {{else if not (isset .Params "description")}}
+            {{$grid_class = "post-item-grid--nodesc"}}
+        {{else if not (isset .Params "image")}}
+            {{$grid_class = "post-item-grid--noimage"}}
         {{else if not (isset .Params "tags")}}
-        {{$title_class = "post-item-grid__nopad"}}
+            {{$grid_class = "post-item-grid--nopad"}}
         {{end}}
-        <a class="{{$title_class}} post-item__link" href="{{.Permalink}}">
+        <div class="post-item-grid {{$grid_class}}">
+        <a class="post-item-grid__title post-item__link" href="{{.Permalink}}">
             <h2 class="post-item__title">{{.Title}}</h2>
             <time class="post-item__date" datetime="{{.Date.Format "2006-01-02"}}">{{.Date.Format "2006-01-02"}}</time>
         </a>
