--- a/assets/scss/_featured-posts.scss
+++ b/assets/scss/_featured-posts.scss
@@ -1,29 +1,69 @@
+.featured-title {
+  font-size: 1.5rem;
+  font-family: monospace;
+  margin: 0 auto;
+  @media (min-width: $screen-lg) {
+    width: 80%;
+  }
+}
 .featured-posts {
   display: grid;
   width: 100%;
-  max-height: 50vh;
-  margin: 1rem 0;
+  height: auto;
+  max-height: 100vh;
+  margin: 0 auto 2.5rem auto;
   box-shadow: 4px 4px var(--color-boxshadow-dark);
   transition-property: box-shadow, transform;
   transition-duration: 0.2s, 0.3s;
   transition-timing-function: ease;
   background: var(--color-card-bg);
 
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-  grid-template-rows: auto;
-  grid-template-areas: 
-    "first second"
-    "first third";
+  grid-template-rows: 2fr repeat(2, 1fr);
+  grid-template-areas:
+    "first"
+    "second"
+    "third";
+
+  @media (min-width: $screen-md) {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-template-rows: auto;
+    grid-template-areas:
+      "first second"
+      "first third";
+  }
+  @media (min-width: $screen-lg) {
+    width: 80%;
+  }
 }
 
-
 .featured-post {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
   border: 1px solid var(--color-border);
-  padding: 2rem;
-  position:relative;
+  padding: 1rem;
+  position: relative;
   transition-property: box-shadow, transform;
   transition-duration: 0.2s, 0.3s;
   transition-timing-function: ease;
+  background: var(--color-hover);
+
+  @media (min-width: $screen-md) {
+    background: transparent;
+    padding: 1.5rem;
+    z-index: 1;
+    position: relative;
+  }
+  @media (min-width: $screen-lg) {
+    padding: 2rem;
+  }
+
+  // &-content {
+  //   position:relative;
+  //   top: 50%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+  // }
 
   & time {
     font-family: monospace;
@@ -36,41 +76,66 @@
   }
 
   &__wrapper {
-    padding: 1rem;
     background: transparent;
+    z-index: 1;
+    position: relative;
     display: block;
+    color: var(color-text-light);
+    @media (min-width: $screen-md) {
+      color: var(color-text);
+    }
+    & time {
+      color: var(--color-text-light);
+      @media (min-width: $screen-md) {
+        color: var(--color-text);
+      }
+    }
+  }
+  &__title {
+    color: var(--color-text-light);
+    @media (min-width: $screen-md) {
+      color: var(--color-text);
+    }
   }
 
   &__image {
-    opacity: 0;
+    opacity: 1;
     position: absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     z-index: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: opacity 0.3s ease; 
+    transition: opacity 0.3s ease;
+    @media (min-width: $screen-md) {
+      opacity: 0;
+    }
   }
-
   &__image-filter {
-    display:none;
-    background: rgba(0,0,0,0.65);
+    display: block;
+    background: rgba(0, 0, 0, 0.7);
     position: absolute;
     z-index: 0;
-    width:100%;
+    width: 100%;
     height: 100%;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    @media (min-width: $screen-md) {
+      display: none;
+    }
   }
 
   &__description {
-      color:var(--color-text-2);
-      margin: 0.5rem 0;
+    color: var(--color-text-light);
+    margin: 0.5rem 0;
+    @media (min-width: $screen-md) {
+      color: var(--color-text-2);
+    }
   }
 
   &__tags {
@@ -79,58 +144,63 @@
     position: relative;
     z-index: 1;
     margin-top: 1rem;
+    margin-left: -0.5rem;
 
     & > li {
       padding: 0.5rem;
-      border: 1px solid var(--color-border);
-      margin: 0.5rem; 
-      &:hover {
-       background: rgba(0,0,0,0.8); 
-       box-shadow: 0px 0px 8px 1px rgba(0,0,0,0.4);
+      border: 1px solid var(--color-border-light);
+      margin: 0.5rem;
+      @media (min-width: $screen-md) {
+        border: 1px solid var(--color-border);
       }
-    }
-  }
-
-  &__title {
-    &:hover {
+      & > a {
+        color: var(--color-text-light);
+        @media (min-width: $screen-md) {
+          color: var(--color-text);
+        }
+      }
+      &:hover {
+        background: rgba(0, 0, 0, 0.8);
+        box-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.4);
+        transition: transform 0.4s ease;
+        transform: translate(2px, 2px);
+      }
     }
   }
 
   &:nth-child(1) {
     grid-area: first;
-    .featured-post__title{
+    .featured-post__title {
       font-weight: 700;
       font-size: 1.5rem;
-      margin: 1rem 0;
+      margin: 0 0 1rem 0;
     }
-    .featured-post__description{
+    .featured-post__description {
       font-size: 1rem;
     }
   }
   &:nth-child(2) {
     grid-area: second;
-    .featured-post__title{
+    .featured-post__title {
       font-weight: 700;
       font-size: 1rem;
       margin: 0.5rem 0;
     }
-    .featured-post__description{
+    .featured-post__description {
       font-size: 0.8rem;
     }
   }
   &:nth-child(3) {
     grid-area: third;
-    .featured-post__title{
+    .featured-post__title {
       font-weight: 700;
       font-size: 1rem;
       margin: 0.5rem 0;
     }
-    .featured-post__description{
+    .featured-post__description {
       font-size: 0.8rem;
     }
   }
-
-
 }
 
 .featured-post:hover .featured-post__image {
@@ -140,6 +210,16 @@
   display: block;
 }
 .featured-post:hover .featured-post__wrapper {
+  color: var(--color-text-light);
+  z-index: 1;
+  position: relative;
+}
+.featured-post:hover .featured-post__title {
+  color: var(--color-text-light);
+  z-index: 1;
+  position: relative;
+}
+.featured-post:hover .featured-post__wrapper time {
   color: var(--color-text-light);
   z-index: 1;
   position: relative;
