--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -2,15 +2,21 @@ header {
   max-width: $screen-max;
   margin: 0 auto;
   padding: 1rem 2%;
+  width: 100%;
+  @media (min-width: $screen-lg) {
+    padding: 1rem 4%;
+  }
 }
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   &__title {
     font-size: 2rem;
     font-weight: bold;
+    margin-bottom: 0.5rem;
   }
 }
 .header-nav-list {
@@ -22,12 +28,11 @@ header {
     margin: 0.5rem;
   }
   &__link {
-    color: black;
-    text-decoration: none;
+    border-bottom: 2px solid transparent;
   }
   &__link:hover {
+    border-bottom: 2px solid black;
     color: black;
-    text-decoration: underline;
   }
 }
 
@@ -37,35 +42,140 @@ header {
     display: block;
   }
 }
-
-.header-nav.mobile {
+.header-nav {
+  &__close-btn {
+    fill: currentColor;
+    &:hover .header-nav__svg-icon {
+      color: gray;
+      fill: gray;
+    }
+  }
+}
+.mb-header-nav {
+  transition: opacity 0.3s ease;
   display: none;
+  position: fixed;
+  background: var(--color-bg);
+  z-index: 10;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100vh;
+  &__title {
+    font-size: 2.5rem;
+    font-weight: 700;
+    & text {
+      animation: 2s stroke alternate;
+      stroke-width: 0.4;
+    }
+  }
 }
-.header-nav[active].mobile {
+.mb-header-nav.active {
   display: block;
-  position: absolute;
-  top:0;
-  left:0;
-  bottom:0;
-  right:0;
-  width:100%;
-  height: 100%;
+}
+.mb-header-nav-list {
+  &__list {
+    margin: auto;
+    width: 50%;
+    display: flex;
+    flex-flow: column;
+    padding: 1rem 1rem;
+  }
+  &__item {
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    font-size: 2.5rem;
+    width: 60%;
+    margin: 1rem auto;
+    text-align: center;
+
+    @media (min-width: $screen-md) {
+      width: 50%;
+    }
+
+    & > a {
+      display: block;
+      position: relative;
+      overflow: hidden;
+      -webkit-text-stroke: 1px var(--color-text);
+      -webkit-text-fill-color: transparent;
+      &:hover {
+        -webkit-text-stroke: 1px #333333;
+      }
+      &:before {
+        z-index: -1;
+        position: absolute;
+        display: block;
+        width: 0;
+        content: "";
+        height: 100%;
+        background: var(--color-hover-extra);
+        transition: width 0.3s ease;
+      }
+      &:hover:before {
+        width: 100%;
+      }
+    }
+  }
 }
 
-.header__menu-btn {
-  background: transparent;
-  border:none;
-  outline: none;
-}
-.header__menu-btn.mobile {
+.mb-header__menu-btn {
   display: block;
+  height: 24px;
+  width: 24px;
+  padding: 0;
+  position: relative;
+
+  & > span:nth-child(1) {
+    transition: transform 0.2s ease;
+    display: inline-block;
+    position: absolute;
+    left:0;
+    top: 3px;
+    width: 100%;
+    height: 2px;
+    background: black;
+  }
+  & > span:nth-child(2) {
+    transition: transform 0.2s ease;
+    display: inline-block;
+    background: black;
+    position: absolute;
+    left:0;
+    top: 12px;
+    width: 100%;
+    height: 2px;
+  }
+  & > span:nth-child(3) {
+    transition: transform 0.2s ease;
+    display: inline-block;
+    background: black;
+    position: absolute;
+    left:0;
+    top: 21px;
+    width: 100%;
+    height: 2px;
+  }
+
+  &:hover &-line:nth-child(1){
+    transform: translate(-2px, -6px) rotate(2deg);
+  }
+  &:hover &-line:nth-child(2){
+    transform: translate(-2px, -2px) rotate(-2deg);
+  }
+  &:hover &-line:nth-child(3){
+    transform: translate(-2px, 6px) rotate(2deg);
+  }
+
   @media (min-width: $screen-lg) {
     display: none;
   }
 }
 
 .header-frame {
-  width: calc(100%);
+  width: 100%;
   transform: translateX(-6px);
   padding: 1rem;
   background: var(--color-header-bg);
@@ -76,13 +186,16 @@ header {
   margin-left: auto;
   transform-style: preserve-3d;
   overflow: visible;
+  @media (min-width: $screen-lg) {
+    width: 80%;
+  }
 }
 .header-frame:after {
   content: "";
   position: absolute;
   background: var(--box-color);
-  width: 17px;
-  height: 17px;
+  width: 15px;
+  height: 15px;
   left: 1px;
   bottom: -11px;
   transform: translateZ(-1px) rotate(45deg);
@@ -94,11 +207,27 @@ header {
   background: var(--box-color);
   width: 15px;
   height: 15px;
-  right: -10px;
+  right: -11px;
   top: 1px;
   transform: translateZ(-1px) rotate(45deg);
   z-index: -1;
 }
 
-.header__title {
+@keyframes stroke {
+  0% {
+    fill: rgba(0, 0, 0, 0);
+    stroke: rgba(0, 0, 0, 1);
+    stroke-dasharray: 0% 50%;
+    stroke-width: 1;
+  }
+  70% {
+    fill: rgba(0, 0, 0, 0);
+    stroke: rgba(0, 0, 0, 1);
+    stroke-dasharray: 90% 50%;
+    stroke-width: 1;
+  }
+  100% {
+    fill: rgba(0, 0, 0, 1);
+    stroke: rgba(0, 0, 0, 1);
+  }
 }
