--- a/assets/scss/_list.scss
+++ b/assets/scss/_list.scss
@@ -1,4 +1,9 @@
 .post-list {
   display: flex;
   flex-flow: column nowrap;
+  margin: 0 auto;
+  width: 100%;
+  @media (min-width: $screen-lg) {
+    width: 80%;
+  }
 }
