--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,7 +12,12 @@
   --color-border-light: white;
   --color-boxshadow: rgba(100,100,100,1);
   --color-boxshadow-dark: rgba(70,70,70,1);
-  --body-bg: rgba(255, 247, 240, 1);
+  --color-extra: #ffecbc;
+  --color-footer-bg: rgba(250,250,250,0.8);
+  --color-code-bg: rgba(100,100,100,1);
+  --color-table-bg: rgba(200,200,200);
+
+  --color-blockquote: #999999;
   --box-color: black;
   --post-text-color: #343f44;
   --post-card-bg: rgba(250, 250, 250, 0.8);
@@ -85,6 +90,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
   background: var(--color-bg);
+  height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
 }
 * {
   box-sizing: border-box;
@@ -107,6 +115,9 @@ table {
 
 button {
   cursor: pointer;
+  background: transparent;
+  border:none;
+  outline: none;
 }
 
 a {
@@ -115,9 +126,15 @@ a {
 }
 
 @import "vars";
+@import "typography";
+@import "flex";
+@import "spacing";
 @import "header";
 @import "main";
+@import "pagination";
 @import "li";
 @import "list";
 @import "summary";
 @import "featured-posts";
+@import "post";
+@import "footer";
